--- a/calon-penerima.html
+++ b/calon-penerima.html
@@ -70,11 +70,11 @@
               <li><a class="nav-link" href="index.html"><i class="fas fa-gauge"></i> <span>Dashboard</span></a></li>
               <li class="menu-header">Panel</li>
               <li><a class="nav-link" href="peserta-didik.html"><i class="fas fa-user-group"></i> <span>Peserta Didik</span></a></li>
-              <li class="active"><a class="nav-link" href="peserta-sertifikasi.html"><i class="fas fa-user-group"></i> <span>Peserta Sertifikasi</span></a></li>
+              <li><a class="nav-link" href="peserta-sertifikasi.html"><i class="fas fa-user-group"></i> <span>Peserta Sertifikasi</span></a></li>
               <li><a class="nav-link" href="perkategori.html"><i class="fas fa-layer-group"></i> <span>Perkategori</span></a></li>
               <hr width="80%">
               <li><a class="nav-link" href="upload-berkas.html"><i class="fas fa-file-arrow-up"></i> <span>Upload Berkas</span></a></li>
-              <li><a class="nav-link" href="calon-penerima.html"><i class="fas fa-user-check"></i> <span>Calon Penerima</span></a></li>
+              <li class="active"><a class="nav-link" href="calon-penerima.html"><i class="fas fa-user-check"></i> <span>Calon Penerima</span></a></li>
               <hr width="80%">
               <li><a class="nav-link" href="https://t.me/+RyVw4jXOwLY5MGQ1" target="_blank"><i class="fas fa-headset"></i> <span>Group Diskusi</span></a></li>
               <li><a class="nav-link" href="tugas.html"><i class="fas fa-wrench"></i> <span>Tugas</span></a></li>
@@ -87,26 +87,32 @@
       <div class="main-content">
         <section class="section">
           <div class="section-header">
-            <h1>Peserta Sertifikasi</h1>
+            <h1>Calon Penerima</h1>
           </div>
 
           <div class="section-body">
             <div class="row">
                 <div class="col-12">
                     <div class="card">
-                        <div class="card-header">
-                            Siswa Memiliki Surat Keterangan sedang mengikuti sertifikasi Keahlian dari lembaga penyelenggara sertifikasi
+                        <div class="card-header bg-primary">
+                            <h5 class="text-white">CALON PENERIMA</h5>
                         </div>
                         <div class="card-body">
                           <div class="table-responsive">
                             <table class="table table-bordered table-satuan" id="table-1">
                               <thead>
                                 <tr class="bg-primary">
+                                  <th>NO</th>  
                                   <th>REFID</th>
                                   <th>NAMA LENGKAP</th>
-                                  <th>NPSN</th>
                                   <th>NISN</th>
-                                  <th>PILIHAN BEASISWA</th>
+                                  <th>NIK</th>
+                                  <th>BESARAN (Rp)</th>
+                                  <th>KATEGORI</th>
+                                  <th>TAHAP</th>
+                                  <th>BANK</th>
+                                  <th>PENCAIRAN</th>
+                                  <th>KONFIRMASI</th>
                                   <th>ACTION</th>
                                 </tr>
                               </thead>
@@ -115,43 +121,130 @@
                                   <td class="text-center">
                                     1
                                   </td>
+                                  <td>SS2023085449</td>
                                   <td>ABIDZAR ALGHIFARI</td>
-                                  <td>70029034</td>
-                                  <td>3149311296</td>
+                                  <td>0053442969</td>
+                                  <td>6474015711050002</td>
+                                  <td>2.500.000</td>
                                   <td>HAFIDZ-HAFIDZAH</td>
+                                  <td>TAHAP 2</td>
+                                  <td>KALTIMTARA</td>
+                                  <td>berhasil-salur</td>
+                                  <td></td>
                                   <td class="text-center">
-                                    <a href="lihat-peserta-sertifikasi.html" class="btn icon-left btn-icon btn-success"><i class="fas fa-eye"></i> Lihat</a>
+                                    <a href="lihat-peserta-kategori.html" class="btn icon-left btn-icon btn-success"><i class="fas fa-eye"></i></a>
                                   </td>
                                 </tr>
                                 <tr>
                                     <td class="text-center">
                                       2
                                     </td>
+                                    <td>SS2023085449</td>
                                     <td>ABIDZAR ALGHIFARI</td>
-                                    <td>70029034</td>
-                                    <td>3149311296</td>
+                                    <td>0053442969</td>
+                                    <td>6474015711050002</td>
+                                    <td>2.500.000</td>
                                     <td>HAFIDZ-HAFIDZAH</td>
+                                    <td>TAHAP 2</td>
+                                    <td>KALTIMTARA</td>
+                                    <td>berhasil-salur</td>
+                                    <td></td>
                                     <td class="text-center">
-                                      <a href="lihat-peserta-sertifikasi.html" class="btn icon-left btn-icon btn-success"><i class="fas fa-eye"></i> Lihat</a>
+                                      <a href="lihat-peserta-kategori.html" class="btn icon-left btn-icon btn-success"><i class="fas fa-eye"></i></a>
                                     </td>
                                   </tr>
                                   <tr>
                                     <td class="text-center">
                                       3
                                     </td>
+                                    <td>SS2023085449</td>
                                     <td>ABIDZAR ALGHIFARI</td>
-                                    <td>70029034</td>
-                                    <td>3149311296</td>
+                                    <td>0053442969</td>
+                                    <td>6474015711050002</td>
+                                    <td>2.500.000</td>
                                     <td>HAFIDZ-HAFIDZAH</td>
+                                    <td>TAHAP 2</td>
+                                    <td>KALTIMTARA</td>
+                                    <td>berhasil-salur</td>
+                                    <td></td>
                                     <td class="text-center">
-                                        <a href="lihat-peserta-sertifikasi.html" class="btn icon-left btn-icon btn-success"><i class="fas fa-eye"></i> Lihat</a>
+                                      <a href="lihat-peserta-kategori.html" class="btn icon-left btn-icon btn-success"><i class="fas fa-eye"></i></a>
                                     </td>
                                   </tr>
                               </tbody>
                             </table>
                           </div>
                         </div>
-                      </div>
+                    </div>
+                </div>
+                <div class="col-12">
+                    <div class="card">
+                        <div class="card-header bg-danger">
+                            <h5 class="text-white">DIBATALKAN</h5>
+                        </div>
+                        <div class="card-body">
+                          <div class="table-responsive">
+                            <table class="table table-bordered table-satuan" id="table-1">
+                              <thead>
+                                <tr class="bg-danger">
+                                  <th>NO</th>  
+                                  <th>REFID</th>
+                                  <th>NAMA LENGKAP</th>
+                                  <th>NISN</th>
+                                  <th>NIK</th>
+                                  <th>BESARAN (Rp)</th>
+                                  <th>KATEGORI</th>
+                                  <th>ACTION</th>
+                                </tr>
+                              </thead>
+                              <tbody>
+                                <tr>
+                                  <td class="text-center">
+                                    1
+                                  </td>
+                                  <td>SS2023085449</td>
+                                  <td>ABIDZAR ALGHIFARI</td>
+                                  <td>0053442969</td>
+                                  <td>6474015711050002</td>
+                                  <td>2.500.000</td>
+                                  <td>HAFIDZ-HAFIDZAH</td>
+                                  <td class="text-center">
+                                    <a href="lihat-peserta-kategori.html" class="btn icon-left btn-icon btn-success"><i class="fas fa-eye"></i></a>
+                                  </td>
+                                </tr>
+                                <tr>
+                                    <td class="text-center">
+                                      2
+                                    </td>
+                                    <td>SS2023085449</td>
+                                    <td>ABIDZAR ALGHIFARI</td>
+                                    <td>0053442969</td>
+                                    <td>6474015711050002</td>
+                                    <td>2.500.000</td>
+                                    <td>HAFIDZ-HAFIDZAH</td>
+                                    <td class="text-center">
+                                      <a href="lihat-peserta-kategori.html" class="btn icon-left btn-icon btn-success"><i class="fas fa-eye"></i></a>
+                                    </td>
+                                  </tr>
+                                  <tr>
+                                    <td class="text-center">
+                                      3
+                                    </td>
+                                    <td>SS2023085449</td>
+                                    <td>ABIDZAR ALGHIFARI</td>
+                                    <td>0053442969</td>
+                                    <td>6474015711050002</td>
+                                    <td>2.500.000</td>
+                                    <td>HAFIDZ-HAFIDZAH</td>
+                                    <td class="text-center">
+                                      <a href="lihat-peserta-kategori.html" class="btn icon-left btn-icon btn-success"><i class="fas fa-eye"></i></a>
+                                    </td>
+                                  </tr>
+                              </tbody>
+                            </table>
+                          </div>
+                        </div>
+                    </div>
                 </div>
             </div>
           </div>
