--- a/upload-berkas.html
+++ b/upload-berkas.html
@@ -11,13 +11,6 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
 
   <!-- CSS Libraries -->
-  <link rel="stylesheet" href="node_modules/jqvmap/dist/jqvmap.min.css">
-  <link rel="stylesheet" href="node_modules/weathericons/css/weather-icons.min.css">
-  <link rel="stylesheet" href="node_modules/weathericons/css/weather-icons-wind.min.css">
-  <link rel="stylesheet" href="node_modules/summernote/dist/summernote-bs4.css">
-  <link rel="stylesheet" href="node_modules/datatables.net-bs4/css/dataTables.bootstrap4.min.css">
-  <link rel="stylesheet" href="node_modules/datatables.net-select-bs4/css/select.bootstrap4.min.css">
-
 
   <!-- Template CSS -->
   <link rel="stylesheet" href="css/style.css">
@@ -38,6 +31,7 @@
             <input class="form-control" type="search" placeholder="Search" aria-label="Search" data-width="250">
             <button class="btn" type="submit"><i class="fas fa-search"></i></button>
             <div class="search-backdrop"></div>
+            
           </div>
         </form>
         <ul class="navbar-nav navbar-right">
@@ -70,10 +64,10 @@
               <li><a class="nav-link" href="index.html"><i class="fas fa-gauge"></i> <span>Dashboard</span></a></li>
               <li class="menu-header">Panel</li>
               <li><a class="nav-link" href="peserta-didik.html"><i class="fas fa-user-group"></i> <span>Peserta Didik</span></a></li>
-              <li class="active"><a class="nav-link" href="peserta-sertifikasi.html"><i class="fas fa-user-group"></i> <span>Peserta Sertifikasi</span></a></li>
+              <li><a class="nav-link" href="peserta-sertifikasi.html"><i class="fas fa-user-group"></i> <span>Peserta Sertifikasi</span></a></li>
               <li><a class="nav-link" href="perkategori.html"><i class="fas fa-layer-group"></i> <span>Perkategori</span></a></li>
               <hr width="80%">
-              <li><a class="nav-link" href="upload-berkas.html"><i class="fas fa-file-arrow-up"></i> <span>Upload Berkas</span></a></li>
+              <li class="active"><a class="nav-link" href="upload-berkas.html"><i class="fas fa-file-arrow-up"></i> <span>Upload Berkas</span></a></li>
               <li><a class="nav-link" href="calon-penerima.html"><i class="fas fa-user-check"></i> <span>Calon Penerima</span></a></li>
               <hr width="80%">
               <li><a class="nav-link" href="https://t.me/+RyVw4jXOwLY5MGQ1" target="_blank"><i class="fas fa-headset"></i> <span>Group Diskusi</span></a></li>
@@ -87,73 +81,43 @@
       <div class="main-content">
         <section class="section">
           <div class="section-header">
-            <h1>Peserta Sertifikasi</h1>
+            <h1>Upload Berkas</h1>
           </div>
 
           <div class="section-body">
-            <div class="row">
+            <div class="alert alert-primary shadow-sm">
+                <div class="alert-title">Informasi:</div>
+                <ol>
+                    <li>Berkas diupload setelah ditentukan calon penerima</li>
+                </ol>
+              </div>
+
+              <div class="row">
                 <div class="col-12">
                     <div class="card">
-                        <div class="card-header">
-                            Siswa Memiliki Surat Keterangan sedang mengikuti sertifikasi Keahlian dari lembaga penyelenggara sertifikasi
+                        <div class="card-header bg-primary">
+                            <h4 class="text-white">BERKAS UNTUK PENERIMA STIMULAN SISWA</h4>
                         </div>
                         <div class="card-body">
-                          <div class="table-responsive">
-                            <table class="table table-bordered table-satuan" id="table-1">
-                              <thead>
-                                <tr class="bg-primary">
-                                  <th>REFID</th>
-                                  <th>NAMA LENGKAP</th>
-                                  <th>NPSN</th>
-                                  <th>NISN</th>
-                                  <th>PILIHAN BEASISWA</th>
-                                  <th>ACTION</th>
-                                </tr>
-                              </thead>
-                              <tbody>
-                                <tr>
-                                  <td class="text-center">
-                                    1
-                                  </td>
-                                  <td>ABIDZAR ALGHIFARI</td>
-                                  <td>70029034</td>
-                                  <td>3149311296</td>
-                                  <td>HAFIDZ-HAFIDZAH</td>
-                                  <td class="text-center">
-                                    <a href="lihat-peserta-sertifikasi.html" class="btn icon-left btn-icon btn-success"><i class="fas fa-eye"></i> Lihat</a>
-                                  </td>
-                                </tr>
-                                <tr>
-                                    <td class="text-center">
-                                      2
-                                    </td>
-                                    <td>ABIDZAR ALGHIFARI</td>
-                                    <td>70029034</td>
-                                    <td>3149311296</td>
-                                    <td>HAFIDZ-HAFIDZAH</td>
-                                    <td class="text-center">
-                                      <a href="lihat-peserta-sertifikasi.html" class="btn icon-left btn-icon btn-success"><i class="fas fa-eye"></i> Lihat</a>
-                                    </td>
-                                  </tr>
-                                  <tr>
-                                    <td class="text-center">
-                                      3
-                                    </td>
-                                    <td>ABIDZAR ALGHIFARI</td>
-                                    <td>70029034</td>
-                                    <td>3149311296</td>
-                                    <td>HAFIDZ-HAFIDZAH</td>
-                                    <td class="text-center">
-                                        <a href="lihat-peserta-sertifikasi.html" class="btn icon-left btn-icon btn-success"><i class="fas fa-eye"></i> Lihat</a>
-                                    </td>
-                                  </tr>
-                              </tbody>
-                            </table>
-                          </div>
+                            <p>Surat Keterangan Data Siswa yang didaftarkan dikeluarkan oleh <strong>Satuan Pendidikan</strong>.</p>
+                            <div class="row mb-4">
+                                <div class="col-md">
+                                    <a href="asset/SURAT_KETERANGAN_DATA_SISWA.docx" class="btn btn-icon icon-left btn-warning align-self-center mb-2" download="SURAT_KETERANGAN_DATA_SISWA"><i class="fas fa-download"></i> Download Template Dokumen Satuan Pendidikan</a>
+                                    <a href="#" class="btn btn-icon icon-left btn-success align-self-center mb-2" download="LAMPIRAN_DATA_SISWA"><i class="fas fa-file-excel"></i> Download Lampiran Data Siswa</a>
+                                </div>
+                            </div>
+                            <div class="form-group">
+                                <label for="avatar">File Surat Keterangan Data Siswa yang Terdaftar (Format PDF - Ukuran File Max:1MB)</label>
+                                <div class="custom-file">
+                                    <input type="file" class="custom-file-input" id="customFile">
+                                    <label class="custom-file-label" for="customFile">Choose file</label>
+                                </div>
+                            </div>
+                            <a href="#" class="btn btn-icon btn-block icon-left btn-primary"><i class="fa-solid fa-arrow-up-from-bracket"></i> Upload</a>
                         </div>
                       </div>
                 </div>
-            </div>
+              </div>
           </div>
         </section>
       </div>
@@ -175,22 +139,11 @@
   <script src="https://kit.fontawesome.com/39f6e58ccc.js" crossorigin="anonymous"></script>
 
   <!-- JS Libraies -->
-  <script src="node_modules/simpleweather/jquery.simpleWeather.min.js"></script>
-  <script src="node_modules/chart.js/dist/Chart.min.js"></script>
-  <script src="node_modules/jqvmap/dist/jquery.vmap.min.js"></script>
-  <script src="node_modules/jqvmap/dist/maps/jquery.vmap.world.js"></script>
-  <script src="node_modules/summernote/dist/summernote-bs4.js"></script>
-  <script src="node_modules/chocolat/dist/js/jquery.chocolat.min.js"></script>
-  <script src="https://kit.fontawesome.com/39f6e58ccc.js" crossorigin="anonymous"></script>
-  <script src="node_modules/datatables/media/js/jquery.dataTables.min.js"></script>
-  <script src="node_modules/datatables.net-bs4/js/dataTables.bootstrap4.min.js"></script>
-  <script src="node_modules/datatables.net-select-bs4/js/select.bootstrap4.min.js"></script>
 
   <!-- Template JS File -->
   <script src="js/scripts.js"></script>
   <script src="js/custom.js"></script>
 
   <!-- Page Specific JS File -->
-  <script src="js/page/modules-datatables.js"></script>
 </body>
 </html>
